--- a/site.yml
+++ b/site.yml
@@ -2,8 +2,8 @@ runtime:
   cache_dir: ./.cache/antora
 
 site:
-  title: Template Tutorial
-  url: https://redhat-scholars.github.io/course-template
+  title: Validated Patterns Workshop
+  url: https://validatedpatterns.github.io/workshop
   start_page: template-tutorial::index.adoc
 
 content:
@@ -13,7 +13,7 @@ content:
 
 asciidoc:
   attributes:
-    release-version: master
+    release-version: main
     page-pagination: true
   extensions:
     - ./lib/tab-block.js
