--- a/site.yml
+++ b/site.yml
@@ -4,7 +4,7 @@ runtime:
 site:
   title: Validated Patterns Workshop
   url: https://validatedpatterns.github.io/workshop
-  start_page: template-tutorial::index.adoc
+  start_page: vp-workshop::index.adoc
 
 content:
   sources:
